# lava

./: .gitignore  CMakeLists.txt  Makefile  README.md  environment  notes.md
lava/lava/: Application.cpp  Application.hpp  LveDevice.cpp  LveDevice.hpp  LveGameObject.cpp  LveGameObject.hpp  LveModel.cpp  LveModel.hpp  LvePipeline.cpp  LvePipeline.hpp  LveRenderer.cpp  LveRenderer.hpp  LveSwapChain.cpp  LveSwapChain.hpp  LveTypes.cpp  LveTypes.hpp  LveWindow.cpp  LveWindow.hpp  Makefile  RenderSystem.cpp  RenderSystem.hpp  compile.sh  environment  main.cpp  notes.md
lava/lava.xcodeproj/: project.pbxproj
lava/lava.xcodeproj/xcshareddata/xcschemes/: lava.xcscheme
lava/lava/shaders/: fragment_shader.frag  vertex_shader.vert
lava/lava/src/private/: KeyboardMovementController.cpp  RenderSystem.cpp
shaders/: fragment_shader.frag  point_light_shader.frag  point_light_shader.vert  vertex_shader.vert
src/: compile.sh  main.cpp
src/private/: Application.cpp  KeyboardMovementController.cpp  LavaBuffer.cpp  LavaCamera.cpp  LavaDescriptor.cpp  LavaDevice.cpp  LavaGameObject.cpp  LavaModel.cpp  LavaPipeline.cpp  LavaRenderer.cpp  LavaSwapChain.cpp  LavaTypes.cpp  LavaWindow.cpp  LveRenderer.cpp  PointLightRenderSystem.cpp  RenderSystem.cpp
src/public/: Application.hpp  KeyboardMovementController.hpp  LavaBuffer.hpp  LavaCamera.hpp  LavaDescriptor.hpp  LavaDevice.hpp  LavaGameObject.hpp  LavaModel.hpp  LavaPipeline.hpp  LavaRenderer.hpp  LavaSwapChain.hpp  LavaTypes.hpp  LavaUtils.hpp  LavaWindow.hpp  LveRenderer.hpp  PointLightRenderSystem.hpp  RenderSystem.hpp
(+18 files in other folders)
